--- a/BibleAppCLI/platforms/ios/www/css/BibleApp.css
+++ b/BibleAppCLI/platforms/ios/www/css/BibleApp.css
@@ -426,9 +426,11 @@ body {
 }
 #statusRow td {
 	border:none;
+	padding:0;
+	margin:0;
 }
 #labelCell {
-	width:70%;
+	width:50%;
 	text-align: center;
 }
 
