--- a/BibleAppCLI/www/css/BibleApp.css
+++ b/BibleAppCLI/www/css/BibleApp.css
@@ -363,7 +363,11 @@ p.ansText {
 * This css files pertains to the SearchView
 */
 #searchRoot {
-	margin: 10%;
+	position: absolute; /* Needed because searchRoot.style.y is set in AppControllerView */
+	margin-top: 3%;
+	margin-left: 10%;
+	margin-right: 10%;
+	margin-bottom: 10%;
 	z-index: 30;
 }
 .searchBorder {
@@ -443,7 +447,7 @@ body {
 */
 
 #tocRoot {
-	position: absolute; /* Needed because tocRoot.style.y is set in TableContentsView */
+	position: absolute; /* Needed because tocRoot.style.y is set in AppControllerView */
 	left: 0;
 	top: 0;
 	margin-top: 1%;
