--- a/BibleAppNW/css/BibleApp.css
+++ b/BibleAppNW/css/BibleApp.css
@@ -511,6 +511,7 @@ td {
 }
 td.rowSpace {
 	padding: 7px;
+	width:100%;
 }
 
 /* Font Size Control */
@@ -539,6 +540,8 @@ td.rowSpace {
 }
 
 /* Font Color Control */
+/* Keep as example of toggle control */
+/*
 td.tableLeftCol {
     width:40%;
     vertical-align:middle;
@@ -584,7 +587,7 @@ td.tableRightCol {
 	border-radius: 2em;
 	box-shadow: 4px 4px 5px #777;
 }
-
+*/
 /* VersionsView CSS */
 div.ctry {
     background-color: white;
