--- a/BibleAppNW/css/BibleApp.css
+++ b/BibleAppNW/css/BibleApp.css
@@ -377,19 +377,20 @@ p.ansText {
 	width:100%;
 	border: solid 1px #d2d2d2;
 	padding: 3px 5px;
-	border-radius: 2em;
+	border-radius: 1.3em;
 	box-shadow: 0 1px 0px rgba(0,0,0,.1);
 	background: #f1f1f1;
 	background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#ededed));
 }
 .searchField {
+	width:95%;
 	font-family: sans-serif;
-	font-size:1.7rem;
+	font-size:1.3rem;
 	background: #fff;
-	padding: 6px 6px 6px 8px;
+	padding: 6px 6px 6px 6px;
 	border: solid 1px #bcbbbb;
 	outline: none;
-	border-radius: 2em;
+	border-radius: 1.3em;
 	box-shadow: inset 0 1px 2px rgba(0,0,0,.2);
 }
 /* Search Results Book Name */
