--- a/BibleAppCLI/www/css/BibleApp.css
+++ b/BibleAppCLI/www/css/BibleApp.css
@@ -264,6 +264,7 @@ button.historyTabBtn {
 /* Static container for questionsView */
 #questionsRoot {
 	position: absolute; /* Needed because questionsRoot.style.y is set in AppControllerView */
+	width: 80%;
 	margin-top: 3%;
 	margin-left: 10%;
 	margin-right: 10%;
@@ -275,10 +276,10 @@ button.historyTabBtn {
 	margin: 0;
 }
 /* Container for one question and answer */
-div.oneQuestion {	
-	width:97%;
+div.oneQuestion {
 	font-family: sans-serif;
 	font-size:1.0rem;
+	/* width is set in QuestionsView */
 	background: #fff;
 	padding: 6px 6px 6px 8px;
 	border: solid 1px #bcbbbb;
@@ -334,32 +335,32 @@ p.ansText {
 /* Question submit button */
 #inputBtn {
 	margin-top: 1%;
-	margin-left: 80%;
+	margin-left: 70%;
 	margin-right: 5%;
 	margin-bottom: 5%;
 	background-color: #3684D6;
 	border-radius: 1em;
 }
 .questionBorder {
-	width:100%;
+	display: inline-block;
+	position: static;
+	/* width and padding are set in questionsView */
 	margin-top:5px;
 	margin-bottom:5px;
 	border: solid 1px #d2d2d2;
-	padding: 3px 5px;
-	border-radius: 1.0rem;
+	border-radius: 0.5em;
 	box-shadow: 0 1px 0px rgba(0,0,0,.1);
 	background: #f1f1f1;
 	background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#ededed));
 }
 .questionField {
-	width:100%;
+	/* width is set in QuestionsView */
 	font-family: sans-serif;
 	font-size:1.3rem;
 	background: #fff;
 	padding: 6px 6px 6px 8px;
 	border: solid 1px #bcbbbb;
-	outline: none;
-	border-radius: 0.5rem;
+	border-radius: 0.5em;
 	box-shadow: inset 0 1px 2px rgba(0,0,0,.2);
 }
 /**
@@ -377,6 +378,7 @@ p.ansText {
 .searchBorder {
 	display: inline-block;
 	position: static;
+	/* width and padding are set dynamically in SearchView */
 	border: solid 1px #d2d2d2;
 	border-radius: 2.0em;
 	box-shadow: 0 1px 0px rgba(0,0,0,.1);
@@ -386,10 +388,10 @@ p.ansText {
 .searchField {
 	font-family: sans-serif;
 	font-size:1.3rem;
+	/* width is set dynamically in SearchView */
 	background: #fff;
 	padding: 6px 6px 6px 8px;
 	border: solid 1px #bcbbbb;
-	/*outline: none;*/
 	border-radius: 1.0em;
 	box-shadow: inset 0 1px 2px rgba(0,0,0,.2);
 }
