--- a/BibleAppNW/css/BibleApp.css
+++ b/BibleAppNW/css/BibleApp.css
@@ -268,6 +268,7 @@ button.historyTabBtn {
 	margin-left: 10%;
 	margin-right: 10%;
 	margin-bottom: 10%;
+	border:solid;
 	z-index: 20;
 }
 /* Generated container for all questions and answers */
@@ -334,32 +335,34 @@ p.ansText {
 /* Question submit button */
 #inputBtn {
 	margin-top: 1%;
-	margin-left: 80%;
+	margin-left: 70%;
 	margin-right: 5%;
 	margin-bottom: 5%;
 	background-color: #3684D6;
 	border-radius: 1em;
 }
 .questionBorder {
-	width:100%;
+	/*width:100%;*/
+	display: inline-block;
+	position: static;	
 	margin-top:5px;
 	margin-bottom:5px;
 	border: solid 1px #d2d2d2;
-	padding: 3px 5px;
-	border-radius: 1.0rem;
+	/*padding: 3px 5px;*/
+	border-radius: 0.5em;
 	box-shadow: 0 1px 0px rgba(0,0,0,.1);
 	background: #f1f1f1;
 	background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#ededed));
 }
 .questionField {
-	width:100%;
+	/*width:100%;*/
 	font-family: sans-serif;
 	font-size:1.3rem;
 	background: #fff;
 	padding: 6px 6px 6px 8px;
 	border: solid 1px #bcbbbb;
-	outline: none;
-	border-radius: 0.5rem;
+	/*outline: none;*/
+	border-radius: 0.5em;
 	box-shadow: inset 0 1px 2px rgba(0,0,0,.2);
 }
 /**
@@ -367,6 +370,7 @@ p.ansText {
 */
 #searchRoot {
 	position: absolute; /* Needed because searchRoot.style.y is set in AppControllerView */
+	width:80%;
 	margin-top: 3%;
 	margin-left: 10%;
 	margin-right: 10%;
@@ -374,23 +378,23 @@ p.ansText {
 	z-index: 30;
 }
 .searchBorder {
-	width:100%;
+	display: inline-block;
+	position: static;
+	/* width and padding are set dynamically in SearchView */
 	border: solid 1px #d2d2d2;
-	padding: 3px 5px;
-	border-radius: 1.3em;
+	border-radius: 2.0em;
 	box-shadow: 0 1px 0px rgba(0,0,0,.1);
 	background: #f1f1f1;
 	background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#ededed));
 }
 .searchField {
-	width:95%;
 	font-family: sans-serif;
 	font-size:1.3rem;
+	/* width is set dynamically in SearchView */
 	background: #fff;
-	padding: 6px 6px 6px 6px;
+	padding: 6px 6px 6px 8px;
 	border: solid 1px #bcbbbb;
-	outline: none;
-	border-radius: 1.3em;
+	border-radius: 1.0em;
 	box-shadow: inset 0 1px 2px rgba(0,0,0,.2);
 }
 /* Search Results Book Name */
