--- a/BibleAppNW/css/BibleApp.css
+++ b/BibleAppNW/css/BibleApp.css
@@ -264,11 +264,11 @@ button.historyTabBtn {
 /* Static container for questionsView */
 #questionsRoot {
 	position: absolute; /* Needed because questionsRoot.style.y is set in AppControllerView */
+	width: 80%;
 	margin-top: 3%;
 	margin-left: 10%;
 	margin-right: 10%;
 	margin-bottom: 10%;
-	border:solid;
 	z-index: 20;
 }
 /* Generated container for all questions and answers */
@@ -276,10 +276,10 @@ button.historyTabBtn {
 	margin: 0;
 }
 /* Container for one question and answer */
-div.oneQuestion {	
-	width:97%;
+div.oneQuestion {
 	font-family: sans-serif;
 	font-size:1.0rem;
+	/* width is set in QuestionsView */
 	background: #fff;
 	padding: 6px 6px 6px 8px;
 	border: solid 1px #bcbbbb;
@@ -342,26 +342,24 @@ p.ansText {
 	border-radius: 1em;
 }
 .questionBorder {
-	/*width:100%;*/
 	display: inline-block;
-	position: static;	
+	position: static;
+	/* width and padding are set in questionsView */
 	margin-top:5px;
 	margin-bottom:5px;
 	border: solid 1px #d2d2d2;
-	/*padding: 3px 5px;*/
 	border-radius: 0.5em;
 	box-shadow: 0 1px 0px rgba(0,0,0,.1);
 	background: #f1f1f1;
 	background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#ededed));
 }
 .questionField {
-	/*width:100%;*/
+	/* width is set in QuestionsView */
 	font-family: sans-serif;
 	font-size:1.3rem;
 	background: #fff;
 	padding: 6px 6px 6px 8px;
 	border: solid 1px #bcbbbb;
-	/*outline: none;*/
 	border-radius: 0.5em;
 	box-shadow: inset 0 1px 2px rgba(0,0,0,.2);
 }
