--- a/BibleAppCLI/www/css/BibleApp.css
+++ b/BibleAppCLI/www/css/BibleApp.css
@@ -525,10 +525,11 @@ td.rowSpace {
 #fontSizeSlider {
 	margin-left:auto;
 	margin-right:auto;
-	border-radius: 7px;
-	background-color:#00008B;
-	width:70%;
-	height:7px;
+	border-radius: 24px;
+	background-color:#49A7E5;
+	width:80%;
+	/*height:7px;*/
+	height:48px;
 }
 #fontSizeThumb {
 	height: 40px;
@@ -537,7 +538,7 @@ td.rowSpace {
 	margin-top: -30px;
 	background: #eee;
 	border: solid 4px #bcbbbb;
-	outline: none;
+	/*outline: none;*/
 	border-radius: 2em;
 	box-shadow: 4px 4px 5px #777;
 }
