--- a/BibleAppCLI/platforms/android/res/xml/config.xml
+++ b/BibleAppCLI/platforms/android/res/xml/config.xml
@@ -32,6 +32,9 @@
         <param name="android-package" value="org.apache.cordova.statusbar.StatusBar" />
         <param name="onload" value="true" />
     </feature>
+    <feature name="Zip">
+        <param name="android-package" value="org.apache.cordova.Zip" />
+    </feature>
     <name>Bible.js</name>
     <description>
         A Bible App designed for the free distribution of the Bible in any language.
