--- a/BibleAppNW/css/BibleApp.css
+++ b/BibleAppNW/css/BibleApp.css
@@ -419,6 +419,17 @@ span.conVerse {
 span.conWord {
 	font-weight: bold;
 }
+p.conMore {
+	margin: 0;
+	padding: 0;
+	font-size: 4.0rem;
+	font-weight: 900;
+	line-height: 2.0rem;
+	color: #27139b;
+	border: solid;
+	border-width: thin;
+	border-color: grey;
+}
 /**
 * This css file pertains to the StatusBar
 */
