--- a/BibleAppNW/css/BibleApp.css
+++ b/BibleAppNW/css/BibleApp.css
@@ -502,6 +502,18 @@ td.tocChap { /* non-std */
 	border-style: solid;
 	border-color: #777777;
 }
+p.versionName {
+	margin-bottom: 0px;
+	font-family: sans-serif;
+	font-size: 1.5rem;
+	color: #777777;
+}
+p.copyright {
+	margin-top: 0px;
+	font-family: sans-serif;
+	font-size: 1.0rem;
+	color: #777777;
+}
 body {
     margin:0;
 }
