--- a/BibleAppNW/css/BibleApp.css
+++ b/BibleAppNW/css/BibleApp.css
@@ -230,6 +230,20 @@ span.x, span.xt {
 	text-align: start;
 	color: #555555; /* non-std */
 	background-color: #CEE7FF; /* non-std */
+}/*
+* Copyright.css
+*/
+span.copyright {
+	font-family: sans-serif;
+	font-size: 0.5rem;
+	color: #AAAAAA;
+	vertical-align: text-middle; /* to vertically align text to hand in copylink */
+}
+span.copylink {
+	font-size: 1.0rem;
+	vertical-align: text-top;
+	color: blue;
+	
 }/**
 * This css files pertains to the HistoryView
 */
