--- a/BibleAppNW/css/BibleApp.css
+++ b/BibleAppNW/css/BibleApp.css
@@ -235,8 +235,8 @@ span.x, span.xt {
 */
 span.copyright {
 	font-family: sans-serif;
-	font-size: 0.5rem;
-	color: #AAAAAA;
+	font-size: 0.66rem;
+	color: #777777;
 	vertical-align: text-middle; /* to vertically align text to hand in copylink */
 }
 span.copylink {
