--- a/YourBible/www/css/BibleApp.css
+++ b/YourBible/www/css/BibleApp.css
@@ -245,37 +245,32 @@ span.copylink {
 	color: blue;
 }
 #attribution {
-  position: fixed;
-  width: 80%;
-  top: 10%;
-  margin-top: 7%; /* What should it really be. */
-  margin-left: 7%;
-  margin-right: 7%;
-  padding: 3%;
-  text-align: center;
-  z-index: 200;
-  background-color: rgba(255, 246, 233, 0.9);
-  border-radius: 25px;
-  border: solid;
-  border-width: thin;
-  box-shadow: 4px 4px 4px #777;
-  -webkit-box-shadow: 4px 4px 4px #777;
+  background-color: rgba(76,192,133,0.1);/*rgba(255, 246, 233, 0.9);*/
+  color: #000000;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 1px;
+  padding-bottom: 1px;
+  text-align: right; /* Needed to right align X */
 }
 p.attribVers {
-	
+	font-size: 1.2rem;
+	text-align: center;
+	margin-bottom: 0px;
 }
 p.attribCopy {
-	
+	font-size: 1.1rem;
+	text-align: center;
+	margin-top: 0px;
 }
 p.attribLink {
 	color: blue;
 	text-decoration: underline;
+	text-align: center;
 }
 #closeIcon {
-	position: fixed;
-	left: 10px;
-	top: 10px;
-	color: red;
+	margin-top: 7px;
+	margin-bottom: 0px;
 }
 span.copyTitle {
 	margin-bottom: 0px;
