--- a/YourBible/www/css/BibleApp.css
+++ b/YourBible/www/css/BibleApp.css
@@ -666,8 +666,6 @@ table.ctry {
 	border-radius: 48px;
 	margin-bottom: 20px;
 	font-family: sans-serif;
-	font-size: 1.5rem;
-	font-weight: bold;
 	box-shadow: 7px 7px 7px #777;
 	-webkit-box-shadow: 7px 7px 7px #777;
 	width: 100%;
@@ -681,7 +679,16 @@ td.ctryFlag {
 td.ctryFlag img {
 	vertical-align: middle;
 }
+td.localCtryName {
+	font-size: 1.5rem;
+	font-weight: bold;
+	vertical-align: middle;
+	width: auto;	
+}
 td.ctryName {
+	font-size: 1.0rem;
+	font-weight: bold;
+	padding-left: 4px;
 	vertical-align: middle;
 	width: auto;
 }
